<resources>
    <string name="app_name">CourseKotlin</string>
    <string name="lets_count">Lets Count</string>
    <string name="Count">Count</string>
    <string name="welcome">Welcome</string>
    <string name="Beef" />
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="shrimp">Shrimp</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="u_wanna_any_extras">U Wanna any Extras ?</string>
</resources>